UPDATE: ALIGN ISSUES

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -158,6 +158,7 @@ html::-webkit-scrollbar-track {
 .__anni_brand_menu_mobile_container img:first-child {
     width: 1.8rem;
 }
+
 @media screen and (max-width: 810px) {
     #__anni_navbar_mobile {
         display: block;
@@ -249,8 +250,9 @@ html::-webkit-scrollbar-track {
     font-family: 'Source Serif Pro';
     font-style: normal;
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 2.5rem;
     line-height: 40px;
+    margin-bottom: 2rem
 }
 
 .___section_number {
@@ -266,7 +268,7 @@ html::-webkit-scrollbar-track {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 800;
-    font-size: 14rem;
+    font-size: 15rem;
     line-height: 1;
     display: inline-block;
     color: #FFFFFF;
@@ -300,6 +302,84 @@ html::-webkit-scrollbar-track {
     height: 2px;
     width: 5rem;
     display: inline-block;
+}
+
+@media screen and (min-width: 1600px) {
+    .___section_h2 {
+        font-size: 2rem;
+    }
+
+
+    .__FAQ .___section_p {
+        margin-bottom: 2rem;
+    }
+
+    .___section_p {
+        font-size: 3rem;
+    }
+
+    .__section_nt_line {
+        height: 1.5px;
+        width: 2rem;
+    }
+
+    .__welove {
+        height: 49vh;
+        padding: 2rem 12rem;
+    }
+
+    .___section_number {}
+}
+
+@media screen and (min-width: 1366px) {
+    .___section_number_frame {
+        position: absolute;
+        z-index: -0;
+        left: 15%;
+    }
+
+    .___section_number {
+        position: absolute;
+        right: 25%;
+        z-index: -1;
+    }
+        .__welove_content {
+        z-index: 2;
+        position: relative;
+    }
+    .__appointment .__welove_content,
+    .__contact .__welove_content {
+        top: 40%;
+    }
+}
+
+@media screen and (max-width: 1366px) {
+    .___section_number_container {
+        position: relative;
+    }
+
+    .___section_number_frame {
+        position: absolute;
+        z-index: -0;
+        left: 15%;
+    }
+
+    .__appointment .__welove_content,
+    .__contact .__welove_content {
+        top: 40%;
+    }
+
+    .__welove_content {
+        z-index: 2;
+        position: relative;
+    }
+
+    .___section_number {
+        position: absolute;
+        right: 25%;
+        z-index: -1;
+    }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -713,9 +793,15 @@ body[class*="opened"] ._anni_menu_svg_path .mkdf-fullscreen-menu-opener-icon rec
     font-weight: 600;
     border-radius: 0;
     border: solid 2px #000;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
+@media screen and (min-width: 1600px) {
+    .__anni_btn_outline {
+
+        font-size: 1.2rem;
+    }
+}
 
 /*Dropdown languaje*/
 .__anni_language_dropdown {
@@ -1006,31 +1092,7 @@ body[class*="opened"] ._anni_menu_svg_path .mkdf-fullscreen-menu-opener-icon rec
 }
 
 
-@media screen and (max-width: 512px) {}
 
-@media screen and (min-width: 1366px) {
-    .___section_number_container {
-        position: relative;
-    }
-
-    .___section_number_frame {
-        position: absolute;
-        z-index: -0;
-
-    }
-
-    .__welove_content {
-        z-index: 2;
-        position: relative;
-    }
-
-    .___section_number {
-        position: absolute;
-        right: 10%;
-        z-index: -1;
-    }
-
-}
 
 .__anni_wholove_client_on_right_name {
     right: -13% !important;
